face-call section

--- a/faceAndNeck.html
+++ b/faceAndNeck.html
@@ -429,22 +429,22 @@
 
          <!-- call us section   -->
 
-         <section class="mt-10">
-            <div class="call-us-section bg-color1 py-16">
+         <section class="mt-8">
+            <div class="call-us-section">
                 <div class="container mx-auto">
                     <div class="call-container flex justify-center">
-                        <div class="w-10/12 flex justify-center items-center relative ">
+                        <div class="w-10/12 flex justify-center items-center relative  bg-color1 py-16 overflow-hidden">
                             <div class="background-images ">
-                                <div class="call-background-3 absolute top-[-85%] right-[-10%] w-4/12 h-full z-0">
+                                <div class="call-background-3 absolute top-[0%] right-[0%] w-4/12 h-full z-0">
                                     <img src="assets/faceAdNecks-images/decoration-image-4.png" alt="decoration images">
                                 </div>
-                                <div class="call-background-4 absolute bottom-[70%] left-[-10%] w-4/12 h-full z-0">
+                                <div class="call-background-4 absolute bottom-[-8%] left-[0%] w-4/12 h-full z-0">
                                     <img src="assets/faceAdNecks-images/decoration-image-5.png" alt="decoration images">
                                 </div>
-                                <div class="call-background-1 absolute top-[-109%] right-[-10%] w-10 z-0">
+                                <div class="call-background-1 absolute top-[-4%] right-[0%] w-10 z-0">
                                     <img src="assets/faceAdNecks-images/decoration-image-2.png" alt="decoration images">
                                 </div>
-                                <div class="call-background-2 absolute bottom-[-80%] left-[-10%] w-12  z-0">
+                                <div class="call-background-2 absolute bottom-[0%] left-[0%] w-12  z-0">
                                     <img src="assets/faceAdNecks-images/decoration-image-3.png" alt="decoration images">
                                 </div>
                                
