--- a/esella.html
+++ b/esella.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Esella Page</title>
-  <link rel="stylesheet" href="css/sexual.css">
+  <link rel="stylesheet" href="css/esella.css">
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
