--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="nav-bar  border-gray-200 px-4 lg:px-6 py-2.5 ">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl mx-0">
-                <a href="https://flowbite.com" class="flex justify-center items-center">
+                <a href="index.html" class="flex justify-center items-center">
                     <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />                  
                 </a>
                 <div class="flex items-center lg:order-2">
