--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <a href="#" class="hover:text-gray-300">ESELLA</a>
                   <a href="#" class="hover:text-gray-300">Sexual DYSFUNCTION</a>
                 </nav>
-                <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
+                <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
             </div>
         </div>
     </header> -->
@@ -39,7 +39,7 @@
                 </a>
                 <div class="flex items-center lg:order-2">
                     
-                    <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
+                    <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -238,9 +238,9 @@
                             <h2 class="heading-34">Featured Videos BODY fx</h2>
                         </div>
                         <div class="w-3/12 flex items-center">
-                            <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">More Videos</a>
+                            <a href="video.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">More Videos</a>
                         </div>
-                        <div class="body-video-first-image">
+                        <div class="body-video-first-image " >
                             <img src="assets/images/body-video-first.png" alt="body-video-image">
                         </div>
                         <div class="body-video-second-image">
@@ -497,7 +497,7 @@
                 <!-- Latest First Section (list of blogs) -->
                 <div class="w-full lg:w-5/12 order-2 lg:order-1">
                   <!-- Blog Item 1 -->
-                  <div class="latest-first-section flex items-start mb-6">
+                  <div class="latest-first-section flex items-center mb-6">
                     <div class="leatest-image mr-4 w-24 h-24">
                       <img
                         src="assets/images/section-11-image1.png"
@@ -511,13 +511,17 @@
                         Our expert doctor provides laser hair removal services to thousands of happy customers.
                       </p>
                       <div class="read-more">
-                        <a href="#" class="text-teal-500 font-medium hover:underline">Read More</a>
+                        <a href="blogdetail.html" class="text-black font-medium hover:underline flex items-center">Read More
+                            <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </a>
                       </div>
                     </div>
                   </div>
           
                   <!-- Blog Item 2 -->
-                  <div class="latest-first-section flex items-start mb-6">
+                  <div class="latest-first-section flex items-center mb-6">
                     <div class="leatest-image mr-4 w-24 h-24">
                       <img
                         src="assets/images/section-11-image1.png"
@@ -531,7 +535,11 @@
                         Our expert doctor provides laser hair removal services to thousands of happy customers.
                       </p>
                       <div class="read-more">
-                        <a href="#" class="text-teal-500 font-medium hover:underline">Read More</a>
+                        <a href="blogdetail.html" class="text-black font-medium hover:underline flex items-center">Read More
+                            <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180 text-black mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -539,7 +547,7 @@
                   <!-- View More Button -->
                   <div class="latest-button">
                     <button class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded w-full lg:w-auto">
-                      View More
+                        <a href="blog.html" class="text-white font-medium hover:underline ">View More</a>
                     </button>
                   </div>
                 </div>
@@ -571,11 +579,11 @@
                   <div class="footer-pages">
                     <h4 class="text-white font-semibold text-lg mb-4 text-center md:text-left">Our Pages</h4>
                     <ul class="text-white space-y-2 text-center md:text-left">
-                      <li><a href="index.html" class="hover:text-teal-500">Home</a></li>
-                      <li><a href="faceAndNeck.html" class="hover:text-teal-500">Face and Neck</a></li>
-                      <li><a href="body.html" class="hover:text-teal-500">Body</a></li>
-                      <li><a href="esella.html" class="hover:text-teal-500">Esella</a></li>
-                      <li><a href="sexual.html" class="hover:text-teal-500">Sexual Dysfunction</a></li>
+                      <li><a href="#" class="hover:text-teal-500">Home</a></li>
+                      <li><a href="#" class="hover:text-teal-500">Face and Neck</a></li>
+                      <li><a href="#" class="hover:text-teal-500">Body</a></li>
+                      <li><a href="#" class="hover:text-teal-500">Esella</a></li>
+                      <li><a href="#" class="hover:text-teal-500">Sexual Dysfunction</a></li>
                     </ul>
                   </div>
                 </div>
