--- a/faceAndNeck.html
+++ b/faceAndNeck.html
@@ -28,7 +28,7 @@
                   <a href="#" class="hover:text-gray-300">ESELLA</a>
                   <a href="#" class="hover:text-gray-300">Sexual DYSFUNCTION</a>
                 </nav>
-                <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
+                <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
             </div>
         </div>
     </header> -->
@@ -40,7 +40,7 @@
                 </a>
                 <div class="flex items-center lg:order-2">
                     
-                    <a href="#" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
+                    <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -101,7 +101,7 @@
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
-                                                <img src="assets/faceAdNecks-images/home.png" alt="Home">
+                                                 <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
                                             <p class="text-white">Face and Neck</p>
