gallery section in index"

--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
                     </div>
                     <div class="w-full">
                         <div class="swiper-container1">
-                            <div class="swiper-wrapper">
+                            <div class="swiper-wrapper flex items-center">
                                 
                                 <div class="swiper-slide">
                                     <div class="">
-                                      <div class="relative  flex">
+                                      <div class="relative  flex overflow-hidden">
                                         <div class="middle absolute top-[30%] left-[47%] ">
                                             <img src="assets/images/box.png" alt="box">
                                         </div>
@@ -376,21 +376,21 @@
                                   </div>
                                   <div class="swiper-slide">
                                     <div class="">
-                                      <div class="gallery-img">
-                                          <img src="assets/images/section-9-image-2.png" alt="Before Image" class="rounded-lg shadow-md">
+                                      <div class="gallery-img flex justify-center">
+                                          <img src="assets/images/section-9-image-2.png" alt="Before Image" class=" shadow-md w-10/12">
                                       </div>
                                     </div>
                                   </div>
                                   <div class="swiper-slide">
                                     <div class="">
-                                      <div class="gallery-img">
-                                          <img src="assets/images/section-9-image-1.png" alt="Before Image" class="rounded-lg shadow-md">
+                                      <div class="gallery-img flex justify-center">
+                                          <img src="assets/images/section-9-image-1.png" alt="Before Image" class=" shadow-md w-10/12">
                                       </div>
                                     </div>
                                   </div>
                                   <div class="swiper-slide">
                                     <div class="">
-                                      <div class="relative  flex">
+                                      <div class="relative  flex overflow-hidden">
                                         <div class="middle absolute top-[30%] left-[47%] ">
                                             <img src="assets/images/box.png" alt="box">
                                         </div>
@@ -410,12 +410,11 @@
                                   </div>
                                   <div class="swiper-slide">
                                     <div class="">
-                                      <div class="gallery-img">
-                                          <img src="assets/images/section-9-image-1.png" alt="Before Image" class="rounded-lg shadow-md">
+                                      <div class="gallery-img flex justify-center">
+                                          <img src="assets/images/section-9-image-1.png" alt="Before Image" class=" shadow-md w-10/12">
                                       </div>
                                     </div>
                                   </div>
-                                  
                             </div>
                         </div>
                     </div>
