--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Page</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/blog.css">
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,7 +76,7 @@
                                 <div class="banner-first-image text-white">
                                     <img src="assets/blog-images/banner-image-1.png" alt="banner-image">
                                 </div>
-                                <div class="banner-heading font-64 text-white ml-8"><h2>BLOG</h2></div>
+                                <div class="banner-heading font-64 text-white ml-8"><h2 class="cormorant">BLOG</h2></div>
                             </div>
                             <div class="w-11/12 mt-4 relative">    
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%]">
@@ -85,14 +85,14 @@
                                 <div class="banner-second-part flex justify-between">
                                     <div class="banner-second-text">
                                         <div class="banner-p my-4">
-                                            <p class="text-white">We use premium products for a <br> more natural result.</p>
+                                            <p class="text-white raleway">We use premium products for a <br> more natural result.</p>
                                         </div>
                                         <div class="banner-crub flex">
                                             <div class="banner-crub-image mr-3">
                                                 <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
                                             </div>
                                             <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white">Blog</p>
+                                            <p class="text-white raleway">Blog</p>
                                         </div>
                                     </div>
                                     <div class="banner-second-image ">
@@ -123,9 +123,9 @@
                                             </a>
                                             <div class="p-5">
                                                 <a href="blogdetail.html">
-                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black">The Impact of North Los Angeles  on Women’s Skin</h5>
+                                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-black cormorant">The Impact of North Los Angeles  on Women’s Skin</h5>
                                                 </a>
-                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">The Impact of North Los Angeles Climate on Women’s Skin...</p>
+                                                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 ">The Impact of North Los Angeles Climate on Women’s Skin...</p>
                                                 <div class="read-more flex justify-between">
                                                     <a href="blogdetail.html" class="inline-flex items-center  py-2.5 text-sm font-medium text-center text-black">
                                                         Read more
