--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
           <section class="cols-padding">
             <div class="appointment">
-                <div class="container mx-auto flex justify-center">
+                <div class="container mx-auto flex flex-col md:flex-row justify-center items-center">
                     <div class="w-11/12 flex flex-col md:flex-row justify-around items-center">
                         <!-- Call Section -->
                         <div class="w-full md:w-5/12 call-section-container relative  px-6 py-10 text-center">
@@ -795,7 +795,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+          </section>
         
         
 
