--- a/sexual.html
+++ b/sexual.html
@@ -391,7 +391,7 @@
                                 <div class="call-background-4 absolute bottom-[0%] left-0 w-11/12 md:w-6/12 h-full z-0 hidden md:block">
                                     <img src="assets/faceAdNecks-images/decoration-image-5.png" alt="decoration images">
                                 </div>
-                                <div class="call-background-4 absolute bottom-[-57%] left-0 w-1/2 md:w-8/12 h-full z-0 block md:hidden">
+                                <div class="call-background-4 absolute bottom-[0%] sm:bottom-[-57%] left-0 w-1/2 md:w-8/12 h-full z-0 hidden sm:block md:hidden">
                                     <img src="assets/faceAdNecks-images/decoration-image-5.png" alt="decoration images">
                                 </div>
                                 <div class="call-background-1 absolute top-[-5%] right-0 w-1/12  md:w-10 z-0 ">
