faceand neck page

--- a/index.html
+++ b/index.html
@@ -931,7 +931,10 @@
         
 
         <!-- latest-blog  -->
-        <section class="latest-blog-section py-12 bg-gray-50">
+        <section class="latest-blog-section py-12  relative">
+            <div class="back-blog-img absolute top-[-8%] left-[0%] ">
+                <img src="assets/images/section-11-backgroundimage.png" alt="" class="w-11/12">
+            </div>
             <div class=" mx-auto">
               <!-- Section Heading -->
               <div class="latest-blog-heading flex justify-center mb-8">
