--- a/contactus.html
+++ b/contactus.html
@@ -460,7 +460,7 @@
 
         <!-- health section  -->
 
-        <section class="mt-10">
+        <section class="mt-10 mb-16 md:mb-24">
             <div class="health-section">
               <div class="container mx-auto px-4">
                 <div class="health-container flex justify-center">
@@ -591,7 +591,6 @@
           </section>
 
 
-        <section class="cols-padding"></section>
 
     </main>
     
